--- a/css/style.css
+++ b/css/style.css
@@ -57,6 +57,43 @@ input::placeholder {
 	padding: 0 15px;
 }
 
+.menu-btn {
+	min-width: 30px;
+	min-height: 30px;
+	position: relative;
+	z-index: 2;
+	overflow: hidden;
+	display: none;
+}
+.menu-btn span {
+	width: 30px;
+	height: 4px;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	background-color: #fff;
+	transition: all 0.3s ease;
+}
+.menu-btn span:nth-of-type(2) {
+	top: calc(50% - 10px);
+}
+.menu-btn span:nth-of-type(3) {
+	top: calc(50% + 10px);
+}
+
+.menu-btn.active span:nth-of-type(1) {
+	display: none;
+}
+.menu-btn.active span:nth-of-type(2) {
+	top: 50%;
+	transform: translate(-50%, 0%) rotate(45deg);
+}
+.menu-btn.active span:nth-of-type(3) {
+	top: 50%;
+	transform: translate(-50%, 0%) rotate(-45deg);
+}
+
 /*  */
 
 .header {
@@ -120,6 +157,8 @@ input::placeholder {
 	margin: 0 auto;
 	margin-bottom: 30px;
 	max-width: 600px;
+	padding-left: 10px;
+	padding-right: 10px;
 }
 .studio__subtitle {
 	font-size: 14px;
@@ -146,7 +185,6 @@ input::placeholder {
 	position: absolute;
 	right: 40px;
 	bottom: 40px;
-	width: 320px;
 	height: 16px;
 	display: flex;
 	align-items: center;
@@ -414,7 +452,7 @@ input::placeholder {
 .subscribe__container {
 	padding: 115px 0;
 	margin: 0 auto;
-	width: 600px;
+	max-width: 600px;
 }
 .subscribe__title {
 	margin-bottom: 15px;
@@ -453,7 +491,7 @@ input::placeholder {
 	margin-bottom: 36px;
 }
 .company__wrapper {
-	width: 460px;
+	max-width: 460px;
 }
 .company__logo-footer {
 	margin-bottom: 20px;
@@ -469,8 +507,8 @@ input::placeholder {
 	grid-template-columns: repeat(2, 1fr);
 }
 .nav__grid__item {
-	width: 222px;
-	height: 200px;
+	max-width: 222px;
+	max-height: 200px;
 }
 .nav__title {
 	margin-bottom: 10px;
@@ -546,7 +584,7 @@ input::placeholder {
 	color: #c0c0c0;
 }
 .email__input {
-	width: 470px;
+	width: 100%;
 	height: 52px;
 	border-radius: 12px;
 	border: 1px solid #e5e7eb;
@@ -555,12 +593,12 @@ input::placeholder {
 
 .divider {
 	margin-bottom: 33px;
-	width: 1168px;
+	width: 100%;
 	border: 2px solid white;
 }
 
 .divider-last {
 	margin-bottom: 54px;
-	width: 1168px;
+	width: 100%;
 	border: 2px solid white;
 }
